[gd_scene load_steps=16 format=3 uid="uid://c6ing7t585gyv"]

[ext_resource type="Script" path="res://scenes/main/Player_pracitce.gd" id="1_epoay"]
[ext_resource type="Texture2D" uid="uid://bvsr0p58inkx4" path="res://images/player_sprite.png" id="2_sm5ux"]
[ext_resource type="AudioStream" uid="uid://dsvr0i7ggurcr" path="res://music/キックの素振り2.mp3" id="3_v4su6"]
[ext_resource type="AudioStream" uid="uid://emgb23sd1xak" path="res://music/軽いパンチ1.mp3" id="4_n23db"]
[ext_resource type="AudioStream" uid="uid://cx45k8ynkvywp" path="res://music/パンチの素振り1.mp3" id="5_hrtqn"]
[ext_resource type="AudioStream" uid="uid://byrkby7shlmik" path="res://music/重いパンチ3.mp3" id="6_4vq7x"]
[ext_resource type="AudioStream" uid="uid://qgkpxd5cni0p" path="res://music/Electric_Shock06-1(Short).mp3" id="7_4gs5n"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_rgwth"]
radius = 14.0
height = 42.0

[sub_resource type="Animation" id="Animation_7ew47"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_10sir"]
resource_name = "dash"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}

[sub_resource type="Animation" id="Animation_ogsr7"]
resource_name = "drop"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="Animation_q2gso"]
resource_name = "jump"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}

[sub_resource type="Animation" id="Animation_s5dwu"]
resource_name = "stop"
length = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_xm2g1"]
resource_name = "walk"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 0, 2]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4tufb"]
_data = {
"RESET": SubResource("Animation_7ew47"),
"dash": SubResource("Animation_10sir"),
"drop": SubResource("Animation_ogsr7"),
"jump": SubResource("Animation_q2gso"),
"stop": SubResource("Animation_s5dwu"),
"walk": SubResource("Animation_xm2g1")
}

[node name="Player" type="RigidBody2D"]
position = Vector2(297, 100)
lock_rotation = true
freeze_mode = 1
script = ExtResource("1_epoay")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0.999998, 19)
scale = Vector2(0.126, 0.126)
texture = ExtResource("2_sm5ux")
centered = false
offset = Vector2(-260, -420)
hframes = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_rgwth")

[node name="Raycast" type="Node2D" parent="."]

[node name="RightFootRayCast2D" type="RayCast2D" parent="Raycast"]
position = Vector2(15, 15)
target_position = Vector2(0, 20)

[node name="LeftFootRayCast2D" type="RayCast2D" parent="Raycast"]
position = Vector2(-16, 14)
target_position = Vector2(0, 20)

[node name="LeftBottomRayCast2D" type="RayCast2D" parent="Raycast"]
position = Vector2(-17, 12)
target_position = Vector2(-20, 0)

[node name="RightBottomRayCast2D" type="RayCast2D" parent="Raycast"]
position = Vector2(16, 13)
target_position = Vector2(19, 0)

[node name="LeftTopRayCast2D" type="RayCast2D" parent="Raycast"]
position = Vector2(-16, -15)
target_position = Vector2(0, -12)

[node name="RightTopRayCast2D" type="RayCast2D" parent="Raycast"]
position = Vector2(16, -15)
target_position = Vector2(15, 0)

[node name="LeftTopRayCast2D2" type="RayCast2D" parent="Raycast"]
position = Vector2(-16, -15)
target_position = Vector2(-18, 0)

[node name="RightTopRayCast2D2" type="RayCast2D" parent="Raycast"]
position = Vector2(16, -15)
target_position = Vector2(0, -12)

[node name="AudioJump" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_v4su6")
volume_db = -10.444
pitch_scale = 2.61
bus = &"Sound"

[node name="AudioDrop" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_n23db")
pitch_scale = 0.72
bus = &"Sound"

[node name="AudioDashed" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_hrtqn")
bus = &"Sound"

[node name="AudioAttacked" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_4vq7x")
pitch_scale = 1.29
bus = &"Sound"

[node name="AudioAttackedElectric" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_4gs5n")
volume_db = 5.123
pitch_scale = 1.61
bus = &"Sound"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4tufb")
}
autoplay = "stop"

[connection signal="seesaw_collided" from="." to="." method="_on_seesaw_collided"]
